--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,30 +8,195 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/rssi"
+        android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:layout_marginStart="36dp"
-        android:fontFamily="sans-serif-black"
-        android:text="Hello World!"
-        android:textSize="25dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/networkType"
-        app:layout_constraintVertical_bias="0.043" />
-
-    <TextView
-        android:id="@+id/networkType"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="136dp"
-        android:fontFamily="sans-serif-black"
-        android:text="Hello World!"
-        android:textSize="25dp"
+        android:layout_marginTop="36dp"
+        android:fontFamily="sans-serif"
+        android:text="@string/title"
+        android:textAllCaps="true"
+        android:textColor="#FF3636"
+        android:textSize="34sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TableLayout
+        android:id="@+id/tableLayout"
+        android:layout_width="409dp"
+        android:layout_height="162dp"
+        android:layout_marginTop="44dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvTitle">
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/tvNetworkInfo"
+                android:layout_width="140dp"
+                android:layout_height="wrap_content"
+
+                android:layout_marginStart="40dp"
+                android:fontFamily="sans-serif-black"
+                android:text="@string/networkInfo"
+                android:textColor="#3F51B5"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/tvOperator"
+                android:layout_width="127dp"
+                android:layout_height="wrap_content"
+
+                android:layout_marginStart="40dp"
+                android:fontFamily="sans-serif-black"
+                android:text="@string/operator"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/operator"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+
+                android:fontFamily="sans-serif"
+                android:textColor="#FF9800"
+                android:textSize="20sp" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="20dp">
+
+            <TextView
+                android:id="@+id/networkTypeName"
+                android:layout_width="100dp"
+                android:layout_height="match_parent"
+
+                android:layout_marginStart="40dp"
+                android:fontFamily="sans-serif-black"
+                android:text="@string/networkTypeName"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/networkType"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+
+                android:fontFamily="sans-serif"
+                android:textColor="#FF9800"
+                android:textSize="20sp" />
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/tvRssi"
+                android:layout_width="124dp"
+                android:layout_height="wrap_content"
+
+                android:layout_marginStart="40dp"
+                android:fontFamily="sans-serif-black"
+                android:text="@string/rssi"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/rssi"
+                android:layout_width="198dp"
+                android:layout_height="match_parent"
+
+                android:fontFamily="sans-serif"
+                android:textColor="#FF9800"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+        </TableRow>
+
+    </TableLayout>
+
+    <TableLayout
+        android:layout_width="406dp"
+        android:layout_height="133dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tableLayout">
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/tvNetworkInfo2"
+                android:layout_width="137dp"
+                android:layout_height="match_parent"
+
+                android:layout_marginStart="40dp"
+                android:fontFamily="sans-serif-black"
+                android:text="@string/locationInfo"
+                android:textColor="#3F51B5"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/tvLatitude"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:layout_marginStart="40dp"
+                android:fontFamily="sans-serif-black"
+                android:text="@string/latitude"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/latitude"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+
+                android:fontFamily="sans-serif"
+                android:textColor="#FF9800"
+                android:textSize="20sp" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/tvLongitude"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:layout_marginStart="40dp"
+                android:fontFamily="sans-serif-black"
+                android:text="@string/longitude"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/longitude"
+                android:layout_width="200dp"
+                android:layout_height="match_parent"
+
+                android:fontFamily="sans-serif"
+                android:textColor="#FF9800"
+                android:textSize="20sp" />
+        </TableRow>
+
+    </TableLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
