--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:fontFamily="sans-serif"
         android:text="@string/title"
         android:textAllCaps="true"
-        android:textColor="#FF3636"
+        android:textColor="#DA4848"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -44,7 +44,7 @@
                 android:layout_marginStart="40dp"
                 android:fontFamily="sans-serif-black"
                 android:text="@string/networkInfo"
-                android:textColor="#3F51B5"
+                android:textColor="#3E50B2"
                 android:textSize="24sp"
                 android:textStyle="bold" />
         </TableRow>
@@ -58,6 +58,7 @@
                 android:layout_width="127dp"
                 android:layout_height="wrap_content"
 
+                android:paddingLeft="15dp"
                 android:layout_marginStart="40dp"
                 android:fontFamily="sans-serif-black"
                 android:text="@string/operator"
@@ -82,6 +83,7 @@
                 android:layout_width="100dp"
                 android:layout_height="match_parent"
 
+                android:paddingLeft="15dp"
                 android:layout_marginStart="40dp"
                 android:fontFamily="sans-serif-black"
                 android:text="@string/networkTypeName"
@@ -107,6 +109,7 @@
                 android:layout_width="124dp"
                 android:layout_height="wrap_content"
 
+                android:paddingLeft="15dp"
                 android:layout_marginStart="40dp"
                 android:fontFamily="sans-serif-black"
                 android:text="@string/rssi"
@@ -144,7 +147,7 @@
                 android:layout_marginStart="40dp"
                 android:fontFamily="sans-serif-black"
                 android:text="@string/locationInfo"
-                android:textColor="#3F51B5"
+                android:textColor="#3E50B2"
                 android:textSize="24sp"
                 android:textStyle="bold" />
         </TableRow>
@@ -158,6 +161,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
+                android:paddingLeft="15dp"
                 android:layout_marginStart="40dp"
                 android:fontFamily="sans-serif-black"
                 android:text="@string/latitude"
@@ -167,6 +171,7 @@
                 android:id="@+id/latitude"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+
 
                 android:fontFamily="sans-serif"
                 android:textColor="#FF9800"
@@ -182,6 +187,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
+                android:paddingLeft="15dp"
                 android:layout_marginStart="40dp"
                 android:fontFamily="sans-serif-black"
                 android:text="@string/longitude"
@@ -191,6 +197,7 @@
                 android:id="@+id/longitude"
                 android:layout_width="200dp"
                 android:layout_height="match_parent"
+
 
                 android:fontFamily="sans-serif"
                 android:textColor="#FF9800"
